spacing and backgrounds ui fixes

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,6 @@
 .app-component {
   width: 100%;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
 }
