--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -2,6 +2,7 @@
     padding-top: 4.167vw;
     z-index: 9999;
     transition: 0.2s all;
+    background-color: #03070f;
     
     @media (max-width: 1365px) { 
         padding-top: 5.861vw;
