--- a/src/components/pages/Staking/Staking.scss
+++ b/src/components/pages/Staking/Staking.scss
@@ -1,6 +1,4 @@
-.app-component {
-    min-height: 100vh;
-    display: flex;
-    flex-direction: column;
+.staking-component {
+    background-color: #0f112d;
 }
 
