--- a/src/index.scss
+++ b/src/index.scss
@@ -19,7 +19,7 @@
 
 html {
   scroll-behavior: smooth;
-  background-color: #0f112d;
+  
 }
 
 * {
